--- a/VDI_demo.xaml
+++ b/VDI_demo.xaml
@@ -58,7 +58,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="36">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="72">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>Microsoft.VisualBasic</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -94,6 +94,8 @@
       <AssemblyReference>UiPath.Vision.Core</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Contracts</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Activities</AssemblyReference>
+      <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="VDI_demo" sap:VirtualizedContainerService.HintSize="796,2957" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -231,7 +233,7 @@
                                 <InArgument x:TypeArguments="x:String">[CurrentRow(6).ToString]</InArgument>
                               </Assign.Value>
                             </Assign>
-                            <Sequence DisplayName="Processing Each Email" sap:VirtualizedContainerService.HintSize="526,1147" sap2010:WorkflowViewState.IdRef="Sequence_19">
+                            <Sequence DisplayName="Processing Each Email" sap:VirtualizedContainerService.HintSize="526,1146" sap2010:WorkflowViewState.IdRef="Sequence_19">
                               <sap:WorkflowViewStateService.ViewState>
                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -250,7 +252,7 @@
                                   </ui:CursorPosition>
                                 </ui:Click.CursorPosition>
                                 <ui:Click.Target>
-                                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d61acb72-43ef-4e92-97a7-8a6f9230e065" InformativeScreenshot="1d44c4e498a975df87df3651f173bb73" Selector="[&quot;&lt;uia automationid='4704' cls='SuperGrid' name='Table View' /&gt;&lt;uia cls='GroupHeader' name='Group By: Expanded: Date: Yesterday' tableCol='0' tableRow='0' /&gt;&lt;uia cls='LeafRow' name='*&quot;+ email_subject +&quot;*' /&gt;&quot;]">
+                                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d61acb72-43ef-4e92-97a7-8a6f9230e065" InformativeScreenshot="1d44c4e498a975df87df3651f173bb73" Selector="[&quot;&lt;uia automationid='4704' cls='SuperGrid' name='Table View' /&gt;&lt;uia cls='GroupHeader' name='Group By: Expanded: Date: *' tableCol='0' tableRow='0' /&gt;&lt;uia cls='LeafRow' name='*&quot;+ email_subject +&quot;*' /&gt;&quot;]">
                                     <ui:Target.TimeoutMS>
                                       <InArgument x:TypeArguments="x:Int32" />
                                     </ui:Target.TimeoutMS>
@@ -276,7 +278,7 @@
                                 </ui:GetFullText.Text>
                               </ui:GetFullText>
                               <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="484,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[sender]" />
-                              <If Condition="[sender.ToLower.Contains(&quot;poc&quot;)]" sap:VirtualizedContainerService.HintSize="484,224" sap2010:WorkflowViewState.IdRef="If_2">
+                              <If Condition="[sender.ToLower.Contains(&quot;poc&quot;)]" sap:VirtualizedContainerService.HintSize="484,223" sap2010:WorkflowViewState.IdRef="If_2">
                                 <sap:WorkflowViewStateService.ViewState>
                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -284,7 +286,7 @@
                                   </scg:Dictionary>
                                 </sap:WorkflowViewStateService.ViewState>
                                 <If.Then>
-                                  <Sequence DisplayName="part2" sap:VirtualizedContainerService.HintSize="526,3103" sap2010:WorkflowViewState.IdRef="Sequence_20">
+                                  <Sequence DisplayName="part2" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_20">
                                     <Sequence.Variables>
                                       <Variable x:TypeArguments="x:String" Name="attachment_name" />
                                     </Sequence.Variables>
@@ -808,7 +810,7 @@
                                   </Sequence>
                                 </If.Then>
                                 <If.Else>
-                                  <Sequence DisplayName="part1" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_9">
+                                  <Sequence DisplayName="part1" sap:VirtualizedContainerService.HintSize="478,2602" sap2010:WorkflowViewState.IdRef="Sequence_9">
                                     <Sequence.Variables>
                                       <Variable x:TypeArguments="x:String" Name="case_link" />
                                     </Sequence.Variables>
@@ -1658,7 +1660,7 @@
                                   </ui:CursorPosition>
                                 </ui:Click.CursorPosition>
                                 <ui:Click.Target>
-                                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d61acb72-43ef-4e92-97a7-8a6f9230e065" InformativeScreenshot="1d44c4e498a975df87df3651f173bb73" Selector="[&quot;&lt;uia automationid='4704' cls='SuperGrid' name='Table View' /&gt;&lt;uia cls='GroupHeader' name='Group By: Expanded: Date: Yesterday' tableCol='0' tableRow='0' /&gt;&lt;uia cls='LeafRow' name='*&quot;+ email_subject +&quot;*' /&gt;&quot;]">
+                                  <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="d61acb72-43ef-4e92-97a7-8a6f9230e065" InformativeScreenshot="1d44c4e498a975df87df3651f173bb73" Selector="[&quot;&lt;uia automationid='4704' cls='SuperGrid' name='Table View' /&gt;&lt;uia cls='GroupHeader' name='Group By: Expanded: Date: *' tableCol='0' tableRow='0' /&gt;&lt;uia cls='LeafRow' name='*&quot;+ email_subject +&quot;*' /&gt;&quot;]">
                                     <ui:Target.TimeoutMS>
                                       <InArgument x:TypeArguments="x:Int32" />
                                     </ui:Target.TimeoutMS>
