--- a/VDI_demo.xaml
+++ b/VDI_demo.xaml
@@ -5,7 +5,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1042,3122</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1037,1018</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>VDI_demo_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="90">
@@ -95,23 +95,22 @@
       <AssemblyReference>UiPath.OCR.Contracts</AssemblyReference>
       <AssemblyReference>UiPath.OCR.Activities</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="VDI_demo" sap:VirtualizedContainerService.HintSize="796,2957" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="VDI_demo" sap:VirtualizedContainerService.HintSize="476,853" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:StartProcess WorkingDirectory="{x:Null}" Arguments="C:\Users\wei.wang\Desktop\ww\project\Integration\CircleCI\Data\demosg.rdp /f" DisplayName="Start Process" FileName="C:\Windows\System32\mstsc.exe" sap:VirtualizedContainerService.HintSize="754,87" sap2010:WorkflowViewState.IdRef="StartProcess_1" />
-    <ui:WindowScope ApplicationWindow="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" Window="{x:Null}" DisplayName="Attach Window 'chrome.exe Incidents [S...'" sap:VirtualizedContainerService.HintSize="754,2738" sap2010:WorkflowViewState.IdRef="WindowScope_1" InformativeScreenshot="0aab4fccfd6264327cf44092e890d0e4" Selector="&lt;rdp app='mstsc.exe' cls='TscShellContainerClass' title='demosg - demosg.eastasia.cloudapp.azure.com - Remote Desktop Con*' /&gt;">
+    <ui:StartProcess WorkingDirectory="{x:Null}" Arguments="C:\Users\wei.wang\Desktop\ww\project\Integration\CircleCI\Data\demosg.rdp /f" DisplayName="Start Process" FileName="C:\Windows\System32\mstsc.exe" sap:VirtualizedContainerService.HintSize="434,87" sap2010:WorkflowViewState.IdRef="StartProcess_1" />
+    <ui:WindowScope ApplicationWindow="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" Window="{x:Null}" DisplayName="Attach Window 'chrome.exe Incidents [S...'" sap:VirtualizedContainerService.HintSize="434,634" sap2010:WorkflowViewState.IdRef="WindowScope_1" InformativeScreenshot="0aab4fccfd6264327cf44092e890d0e4" Selector="&lt;rdp app='mstsc.exe' cls='TscShellContainerClass' title='demosg - demosg.eastasia.cloudapp.azure.com - Remote Desktop Con*' /&gt;">
       <ui:WindowScope.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="RDP" sap:VirtualizedContainerService.HintSize="720,2592" sap2010:WorkflowViewState.IdRef="Sequence_4">
+          <Sequence DisplayName="RDP" sap:VirtualizedContainerService.HintSize="376,488" sap2010:WorkflowViewState.IdRef="Sequence_4">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:Boolean" Name="exist_flag" />
               <Variable x:TypeArguments="x:String" Name="sender" />
@@ -129,7 +128,7 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:UiElementExists DisplayName="Element Exists 'item From'" Exists="[exist_flag]" sap:VirtualizedContainerService.HintSize="678,106" sap2010:WorkflowViewState.IdRef="UiElementExists_1">
+            <ui:UiElementExists DisplayName="Element Exists 'item From'" Exists="[exist_flag]" sap:VirtualizedContainerService.HintSize="334,106" sap2010:WorkflowViewState.IdRef="UiElementExists_1">
               <ui:UiElementExists.Target>
                 <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" Id="20250244-fb80-4c62-a61c-dd2b80e7ba6c" InformativeScreenshot="d36413b1f2540db35e0a8ce3861ec13d" Selector="&lt;wnd app='outlook.exe' cls='rctrl_renwnd32' title='*' /&gt;&lt;uia cls='MsoCommandBar' /&gt;&lt;uia automationid='FileTabButton' cls='NetUIRibbonTab' name='File Tab' /&gt;" TimeoutMS="10000">
                   <ui:Target.WaitForReady>
@@ -138,7 +137,7 @@
                 </ui:Target>
               </ui:UiElementExists.Target>
             </ui:UiElementExists>
-            <If Condition="[not exist_flag]" sap:VirtualizedContainerService.HintSize="678,51" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[not exist_flag]" sap:VirtualizedContainerService.HintSize="334,51" sap2010:WorkflowViewState.IdRef="If_1">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -164,7 +163,7 @@
                 </ui:OpenApplication>
               </If.Then>
             </If>
-            <ui:WindowScope ApplicationWindow="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" Window="{x:Null}" DisplayName="Attach Window 'outlook.exe SCB'" sap:VirtualizedContainerService.HintSize="678,2263" sap2010:WorkflowViewState.IdRef="WindowScope_2" InformativeScreenshot="3238c3e2818be3e05db5fccd411e779b" Selector="&lt;rdp app='mstsc.exe' cls='TscShellContainerClass' title='demosg - demosg.eastasia.cloudapp.azure.com - Remote Desktop Con*' /&gt;&lt;wnd app='outlook.exe' cls='rctrl_renwnd32' title='*' /&gt;">
+            <ui:WindowScope ApplicationWindow="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" Window="{x:Null}" DisplayName="Attach Window 'outlook.exe SCB'" sap:VirtualizedContainerService.HintSize="334,51" sap2010:WorkflowViewState.IdRef="WindowScope_2" InformativeScreenshot="3238c3e2818be3e05db5fccd411e779b" Selector="&lt;rdp app='mstsc.exe' cls='TscShellContainerClass' title='demosg - demosg.eastasia.cloudapp.azure.com - Remote Desktop Con*' /&gt;&lt;wnd app='outlook.exe' cls='rctrl_renwnd32' title='*' /&gt;">
               <ui:WindowScope.Body>
                 <ActivityAction x:TypeArguments="x:Object">
                   <ActivityAction.Argument>
@@ -810,7 +809,7 @@
                                   </Sequence>
                                 </If.Then>
                                 <If.Else>
-                                  <Sequence DisplayName="part1" sap:VirtualizedContainerService.HintSize="478,2602" sap2010:WorkflowViewState.IdRef="Sequence_9">
+                                  <Sequence DisplayName="part1" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_9">
                                     <Sequence.Variables>
                                       <Variable x:TypeArguments="x:String" Name="case_link" />
                                     </Sequence.Variables>
@@ -1723,7 +1722,14 @@
                   </Sequence>
                 </ActivityAction>
               </ui:WindowScope.Body>
+              <sap:WorkflowViewStateService.ViewState>
+                <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                  <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                  <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                </scg:Dictionary>
+              </sap:WorkflowViewStateService.ViewState>
             </ui:WindowScope>
+            <ui:CloseWindow Selector="{x:Null}" TimeoutMS="{x:Null}" UseWindow="{x:Null}" DisplayName="Close Window" sap:VirtualizedContainerService.HintSize="334,68" sap2010:WorkflowViewState.IdRef="CloseWindow_3" WaitForReady="INTERACTIVE" />
           </Sequence>
         </ActivityAction>
       </ui:WindowScope.Body>
